CHG: Sync Artifacts - 4.1.2

--- a/deploy/charts/airlock-microgateway-cni/templates/daemonset.yaml
+++ b/deploy/charts/airlock-microgateway-cni/templates/daemonset.yaml
@@ -71,6 +71,7 @@ spec:
               name: cni-net-dir
       nodeSelector:
         kubernetes.io/os: linux
+      hostNetwork: true
       priorityClassName: system-node-critical
       restartPolicy: Always
       securityContext:
