CHG: Sync Artifacts - 4.1.3

--- a/deploy/cni/openshift/values.yaml
+++ b/deploy/cni/openshift/values.yaml
@@ -12,4 +12,4 @@ multusNetworkAttachmentDefinition:
 config:
   installMode: "standalone"
   cniNetDir: "/etc/cni/multus/net.d"
-  cniBinDir: "/opt/multus/bin"
+  cniBinDir: "/var/lib/cni/bin"
